[gd_scene load_steps=11 format=2]

[ext_resource path="res://Mapa.gd" type="Script" id=1]
[ext_resource path="res://SoundManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://BluredBloodBackground2.png" type="Texture" id=3]
[ext_resource path="res://Body.png" type="Texture" id=4]
[ext_resource path="res://HealthUI.png" type="Texture" id=5]
[ext_resource path="res://Character.tscn" type="PackedScene" id=6]
[ext_resource path="res://Gate.tscn" type="PackedScene" id=7]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=8]
[ext_resource path="res://PressLMB.png" type="Texture" id=9]
[ext_resource path="res://WSAD.png" type="Texture" id=10]

[node name="Node2D" type="Node2D"]
position = Vector2( 584.356, 347.076 )
script = ExtResource( 1 )

[node name="SoundManager" parent="." instance=ExtResource( 2 )]

[node name="BloodDrops" type="Node2D" parent="."]

[node name="DeadBloods" type="Node2D" parent="."]

[node name="BloodTiles" type="Node2D" parent="."]

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( -59.4507, -46.8614 )
scale = Vector2( 0.402069, 0.415619 )
z_index = -100
texture = ExtResource( 3 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( 316.465, 172.248 )
z_index = 200

[node name="Meter" type="TextureProgress" parent="UI"]
margin_left = -1.08057
margin_top = 1.08081
margin_right = 254.919
margin_bottom = 257.081
rect_rotation = 180.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 1.0
step = 0.001
value = 0.5
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 2
tint_under = Color( 0.352941, 0.352941, 0.352941, 1 )
tint_progress = Color( 0.662745, 0.0588235, 0.0588235, 1 )

[node name="TextureRect" type="TextureRect" parent="UI/Meter"]
margin_left = -137.379
margin_top = -136.437
margin_right = 118.621
margin_bottom = 119.563
rect_scale = Vector2( 2.08, 2.08 )
texture = ExtResource( 5 )

[node name="BloodMage" parent="." instance=ExtResource( 6 )]
position = Vector2( -239.095, -86.316 )

[node name="Gate" parent="." instance=ExtResource( 7 )]
position = Vector2( 35.1154, -100.243 )

[node name="Zombies" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="."]

[node name="Terrain6" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -115.035, 136.67 )
scale = Vector2( 1, 1.42 )

[node name="Terrain12" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -239.759, 135.344 )
scale = Vector2( 1, 1.42 )

[node name="Terrain13" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 11.678, 136.201 )
scale = Vector2( 1, 1.42 )

[node name="Terrain8" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -114.372, 46.6394 )
scale = Vector2( 1, 1.42 )

[node name="Terrain22" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -239.095, 45.3126 )
scale = Vector2( 1, 1.42 )

[node name="Terrain15" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -176.619, 47.3028 )
scale = Vector2( 1, 1.42 )

[node name="Terrain21" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -301.342, 45.976 )
scale = Vector2( 1, 1.42 )

[node name="Terrain19" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 10.7436, 45.9043 )
scale = Vector2( 1, 1.42 )

[node name="Terrain9" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -114.372, -15.1085 )
scale = Vector2( 1, 1.42 )

[node name="Terrain11" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -239.095, -15.7719 )
scale = Vector2( 1, 1.42 )

[node name="Terrain14" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -176.425, -15.1085 )
scale = Vector2( 1, 1.42 )

[node name="Terrain17" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -301.148, -15.1085 )
scale = Vector2( 1, 1.42 )

[node name="Terrain18" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 71.8395, -14.3734 )
scale = Vector2( 1, 1.42 )

[node name="Terrain25" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 10.7902, -14.1117 )
scale = Vector2( 1, 1.42 )

[node name="Terrain4" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -177.989, 136.201 )
scale = Vector2( 1, 1.42 )

[node name="Terrain23" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -302.712, 134.874 )
scale = Vector2( 1, 1.42 )

[node name="Terrain5" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -52.2808, 136.689 )
scale = Vector2( 1, 1.42 )

[node name="Terrain16" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 75.2325, 136.201 )
scale = Vector2( 1, 1.42 )

[node name="Terrain7" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -50.8177, 46.6394 )
scale = Vector2( 1, 1.42 )

[node name="Terrain10" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( -51.4305, -15.1085 )
scale = Vector2( 1, 1.42 )

[node name="Terrain20" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 74.0975, 46.9698 )
scale = Vector2( 1, 1.42 )

[node name="Raisins" type="Node2D" parent="."]

[node name="Spikes" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -60.204, -47.4625 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="Potions" type="Node2D" parent="."]

[node name="Fountains" type="Node2D" parent="."]

[node name="PressRMB" type="Sprite" parent="."]
position = Vector2( 20.9181, 110.238 )
rotation = 0.15708
scale = Vector2( 0.34, 0.64 )
z_index = 10
texture = ExtResource( 9 )

[node name="WSAD" type="Sprite" parent="."]
position = Vector2( -188.532, 91.9752 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 10 )

